<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.7</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>abe</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>demoABE</name>
	<description>Demo ABE project for Spring Boot</description>
	<properties>
		<java.version>8</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>1.6.9</version>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>7.3.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>7.3.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-picocontainer</artifactId>
			<version>7.3.3</version>
			<scope>test</scope>
		</dependency>

<!-- Not needed after adding jpbc folder to project	-->
<!--		<dependency>-->
<!--			<groupId>com.github.stefano81</groupId>-->
<!--			<artifactId>jpbc</artifactId>-->
<!--			<version>v2.0.0-m</version>-->
<!--		</dependency>-->

		<dependency>
			<groupId>com.vladmihalcea</groupId>
			<artifactId>hibernate-types-55</artifactId>
			<version>2.16.2</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-maven-plugin</artifactId>
			<version>2.7.0</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>de.mirkosertic.bytecoder</groupId>
			<artifactId>bytecoder-mavenplugin</artifactId>
			<version>2021-11-02</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.util.random=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.util=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.action=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.jca=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.provider=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.util=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>de.mirkosertic.bytecoder</groupId>
				<artifactId>bytecoder-mavenplugin</artifactId>
				<version>2021-11-02</version>
				<configuration>
					<mainClass>com.example.abe.HelloWorld</mainClass>
					<backend>wasm</backend>
					<enableExceptionHandling>false</enableExceptionHandling>
					<optimizationLevel>ALL</optimizationLevel>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

</project>
